# ftsh

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.test  Makefile  README.md  _.mk  a.out  run.sh
include/: env.h  minishell.h
src/: _.mk  ckmalloc.c  ckmalloc.h  env.c  env.h  error.c  error.h  exec.c  exec.h  exec_util.c  exec_util.h  gl.c  gl.h  loop.c  loop.h  main.c  minishell.h  parser.c  parser.h  prompt.c  prompt.h  putenv.c  putenv.h  split.c  split.h
src/builtin/: _.mk  builtin.h  cd.c  echo.c  env.c  exit.c  pwd.c  setenv.c  unsetenv.c
